# platinum

./: .env.example  .gitignore  README.md  pyproject.toml  short_film_pipeline_prd.md
config/: settings.yaml
config/tracks/: atmospheric_horror.yaml  childrens_fables.yaml  folktales_world_myths.yaml  scifi_concept.yaml  slice_of_life.yaml
config/workflows/: depth_preprocessor.json  flux_dev_keyframe.json  pose_depth_map.json  pose_preprocessor.json  wan22_i2v.json
docs/plans/: 2026-04-25-session-4-claude-adapter-design.md  2026-04-25-session-4-claude-adapter-plan.md  2026-04-25-session-5-aesthetics-validate-design.md  2026-04-25-session-5-aesthetics-validate-plan.md  2026-04-25-session-6-keyframe-generator-design.md  2026-04-25-session-6-keyframe-generator-plan.md  2026-04-25-session-6.1-keyframe-live-smoke-design.md  2026-04-25-session-6.1-keyframe-live-smoke-plan.md  2026-04-26-session-6.2-keyframe-quality-fix-design.md  2026-04-26-session-6.2-keyframe-quality-fix-plan.md  2026-04-26-session-6.3-flux-workflow-rebuild-design.md  2026-04-26-session-6.3-flux-workflow-rebuild-plan.md  2026-04-27-session-6.4-retro-debt-design.md  2026-04-27-session-6.4-retro-debt-plan.md  2026-04-27-session-7-keyframe-review-ui-design.md  2026-04-27-session-7-keyframe-review-ui-plan.md  2026-04-28-session-7.1-content-fidelity-design.md  2026-04-28-session-7.1-content-fidelity-plan.md  2026-04-30-session-8-wan22-i2v-design.md  2026-04-30-session-8-wan22-i2v-plan.md  2026-04-30-session-8.17-wan22-i2v-rewrite-design.md  2026-04-30-session-8.17-wan22-i2v-rewrite-plan.md  (+4 more)
scripts/: acquire_librivox_voice.py  curate_music_library.py  keyframe_quality_smoke.py  preflight_check.py  reset_scene_keyframes.py  seed_lut_library.py  vast_setup.sh
tasks/: todo.md
tests/: _fixtures.py  conftest.py
(+127 files in other folders)
