[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platinum"
version = "0.1.0"
description = "Cinematic AI short-film pipeline (3-15 minute narrated films across five genre tracks)"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    # Persistence
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    # AI / LLM
    "anthropic>=0.40",
    # Media
    "ffmpeg-python>=0.2",
    "pillow>=10.4",
    "opencv-python>=4.10",
    "numpy>=1.26",
    # Validation / scoring
    "mediapipe>=0.10",
    # Whisper (local subtitle generation when used)
    "openai-whisper>=20240930",
    # Web review UI
    "flask>=3.0",
    # YouTube publish
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    # Cloud (vast.ai SSH)
    "paramiko>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
]

# Aesthetic-scoring dependencies are heavy (torch, transformers); install separately when needed.
aesthetics = [
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=4.45",
    "open-clip-torch>=2.26",
]

[project.scripts]
platinum = "platinum.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
